--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          margin: 0;
          padding: 0;
          background-color: #101010;
-         color: #FCD12A;
+         color: #FFFFFF;
          }
          main {
          position: relative;
@@ -34,7 +34,7 @@
          position: relative;  
          text-align: center;
          background-color: #101010;
-         color: #FCD12A;
+         color: #FFFFFF;
          }
       </style>
 	
@@ -76,7 +76,7 @@
 						playTypingAnimation(typingTexts[0]);
 
 						</script> 
-         <a href="mailto:raghubhp14@gmail.com" title="email ">raghubhp14@gmail.com</a>
+         <a href="mailto:contact@raghuboya.com" title="email ">contact@raghuboya.com</a>
          <br>
          <a href="tel:+1 7323978655" title="+1 732 397 8655">+1 732 397 8655</a>
       <footer>
