--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Raghu Boya</title>
+     <script>
+    if (window.location.protocol === "http:") {
+      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+    }
+  </script>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
   </head>
