--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="particles-js"></div>
     <main>
+    <div class="profile-image">  <img src="https://raw.githubusercontent.com/juvenile222/ragboya/refs/heads/main/profile%20pic.png" alt="Raghu Boya's Profile Picture"> </div>
       <h1>Raghu Boya</h1>
 
       <h1>I am a <span id="str"></span></h1>
