--- a/index.html
+++ b/index.html
@@ -3,18 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <title>Raghu Boya</title>
-     <script>
-    if (window.location.protocol === "http:") {
-      window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-    }
-  </script>
+    <script>
+      if (window.location.protocol === "http:") {
+        window.location.href =
+          "https:" +
+          window.location.href.substring(window.location.protocol.length)
+      }
+    </script>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div id="particles-js"></div>
     <main>
-    <div class="profile-image">  <img src="https://raw.githubusercontent.com/juvenile222/ragboya/refs/heads/main/profile%20pic.png" alt="Raghu Boya's Profile Picture"> </div>
+      <div class="profile-image">
+        <img
+          src="https://raw.githubusercontent.com/juvenile222/ragboya/refs/heads/main/profile%20pic.png"
+          alt="Raghu Boya's Profile Picture"
+        />
+      </div>
       <h1>Raghu Boya</h1>
 
       <h1>I am a <span id="str"></span></h1>
