--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     </script>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="styles.css" />
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="particles-js"></div>
