--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             ><i class="fa fa-product-hunt"></i></a
         ></span>
 		<span class="tooltip-container" data-tooltip="My Impossible List">
-            <a href="https://github.com/yourgithub" target="_blank" aria-label="Impossible List"><i class="fa fa-check-square"></i
+            <a href="https://raghuboya.com/impossiblelist" target="_blank" aria-label="Impossible List"><i class="fa fa-check-square"></i
         ></a></span>
 		<span class="tooltip-container" data-tooltip="My Linkedin">
             <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank" aria-label="LinkedIn"><i class="fa fa-linkedin"></i
