--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank" aria-label="LinkedIn"><i class="fa fa-linkedin"></i
         ></a></span>
 		<span class="tooltip-container" data-tooltip="My Resume">
-            <a href="https://www.linkedin.com/in/yourlinkedin" target="_blank" aria-label="CV"><i class="fa fa-file-text-o	"></i
+            <a href="https://raghuboya.com/cv" target="_blank" aria-label="CV"><i class="fa fa-file-text-o	"></i
         ></a></span>
         </div>
 	      <br />  <br />
